@@ -2,7 +2,8 @@
 Version: 3.18.9
 Date: ????
   Bugfixes:
-    - Fixed compressed generators taking uncompressed fluid when omnifluid is enabled 
+    - Fixed compressed generators taking uncompressed fluid when omnifluid is enabled
+    - Fixed fuel-burning generators not working with omnifluid enabled 
 ---------------------------------------------------------------------------------------------------
 Version: 3.18.8
 Date: 2020.07.02
